--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0px;
 }
 .heading h1 {
   color: white;
@@ -36,6 +38,7 @@
   --textSoft: #e5e5e5;
   --btn: #3673fd;
 }
+
 * {
   margin: 0;
   padding: 0;
