--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -4,15 +4,6 @@
   height: 100%;
   width: 100%;
 }
-
-.chart2 {
-  margin-top: 250px;
-  align-items: center;
-  justify-content: center;
-  align-self: center;
-  margin-left: 450px;
-  padding-bottom: 20px;
-}
 .introPara {
   text-align: center;
   width: 494px;
@@ -118,4 +109,9 @@
   transform: translateX(-50%);
   transition: left 0.3s ease-in-out;
   margin-top: -8px;
+}
+@media screen and (max-width: 768px) {
+  .pageContainer {
+    flex-direction: column;
+  }
 }
